--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^2.2.0",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "fs-extra": "^11.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "morgan": "^1.10.0",
     "zod": "^3.23.8"
